[package]
name = "http-traffic-gen-rs"
version = "0.1.0"
authors = ["Alexander Serebryakov <alex.serebr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
cidr = "*"
rand = "*"
